--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!--                            INTESTAZIONE                                        -->   
 <main align=”center” class="frame-principale"> 
 <div class="intestazione-img">
-    <a href="https://www.chess.com/club/team-italia-doc"  target=”_blank”> <img height="125" width="125" src="img/tdi.jpeg"></a>
+    <a href="https://www.chess.com/club/team-italia-doc"  target=”_blank”> <img height="125" width="125" src="img/TID.jpeg"></a>
 </div>
 <div>
     <h1 class="intestazione-titolo">Team Italia DOC</h1>
