--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div>
     <h1 class="intestazione-titolo">Team Italia DOC</h1>
     <br>
-    <h1 class="intestazione-piede">Trofeo di Primavera</h1>
+    <h1 class="intestazione-piede">1° Trofeo di Primavera</h1>
     <HR>
 </div>
 
